test/shouldPass/vonVolker/test05.pas
program test05;
var
    x,y,z: integer;
    u : integer;
    v : string = 'hi';

begin
    x := z;
    writeln(y+x)
end.